<resources>
    <string name="app_name">Remind Me</string>
    <string name="remind_me">REMIND ME</string>
    <string name="description">My Image</string>
    <string name="support_button">SUPPORT</string>
    <string name="settings_button">SETTINGS</string>
    <string name="extras_button">EXTRAS</string>
    <string name="reminders_button">REMINDERS</string>
    <string name="home_button">HOME</string>
    <string name="world_clock_button">WORLD CLOCK</string>
    <string name="stopwatch_button">STOPWATCH</string>
    <string name="help_and_support">Help and Support</string>
    <string name="faq">FAQ</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="question1">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer1">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question2">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer2">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question3">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer3">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question4">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer4">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question5">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer5">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question6">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer6">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="question7">This is the location of which a question will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="answer7">This is the location of which an answer will be positioned. This text is here as a placeholder until all the questions and answers to be included have been decided.</string>
    <string name="settings">Settings</string>
    <string name="volume">Adjust alarm volume</string>
    <string name="pause">Pause all alarms</string>
    <string name="extras">Extras</string>
    <string name="world_clock_description">Here you will find a list of times from some major cities around the world.</string>
    <string name="stopwatch_description">Here you will be able to measure the time between intervals with just one click of a button.</string>
    <string name="reminders">Reminders</string>
    <string name="new_reminder">CLICK TO SET NEW REMINDER</string>
    <string name="new_click">NEW</string>
    <string name="upcoming">Next Reminder → </string>
    <string name="your_reminders">Your Reminders ↓↓↓</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="title">Reminder Title</string>
    <string name="notes">Add Brief Note</string>
    <string name="image">Add An Image</string>
    <string name="add_image">Add Image</string>
    <string name="pick_time">Choose a date and time for your reminder</string>
    <string name="arrow_down">↓↓↓↓↓↓</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="input_title">Reminder Title</string>
    <string name="input_note">Add a brief note</string>
    <string name="create">SET REMINDER</string>
    <string name="cancel">CANCEL</string>
    <string name="repeatable">How often do you want the reminder to repeat?</string>

</resources>
