<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/reminderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20"
            android:maxLines="1"
            android:textStyle="bold"
            android:inputType="text"
            android:hint="@string/input_title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/notes"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/reminderNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="90"
            android:maxLines="6"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/input_note"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pickImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_image"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/theImage"
            android:textStyle="bold"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:id="@+id/pickDate"
            android:textSize="20sp"/>

        <Space
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/theDate"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:id="@+id/pickTime"
            android:textSize="20sp"/>

        <Space
            android:layout_width="35dp"
            android:layout_height="35dp" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/theTime"
            android:textStyle="bold"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/round_button_green"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/cancel"
        android:layout_gravity="end"/>

</LinearLayout>