<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminders"
                android:textAlignment="center"
                android:textSize="40sp"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:text="@string/new_reminder"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_new"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@drawable/round_button_green"
                    android:text="@string/new_click"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="290dp"
                android:layout_height="40dp"
                android:text="@string/your_reminders"
                android:textSize="25sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/recyclerView"
                android:padding="4dp"/>>


            <Space
                android:layout_width="match_parent"
                android:layout_height="70dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/button_home"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/round_button"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/home_button"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>